--- a/Fit-To-Fat-Game/Assembly-CSharp.csproj
+++ b/Fit-To-Fat-Game/Assembly-CSharp.csproj
@@ -56,12 +56,15 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\scripts\Mouse.cs" />
-    <Compile Include="Assets\scripts\BallSpawner.cs" />
-    <Compile Include="Assets\scripts\DeactivateBall.cs" />
-    <Compile Include="Assets\scripts\ObjectPooling.cs" />
-    <Compile Include="Assets\scripts\shrinkingcircle.cs" />
-    <Compile Include="Assets\scripts\IDeactivatable.cs" />
+    <Compile Include="Assets\scripts\TouchGame\MouseController.cs" />
+    <Compile Include="Assets\scripts\TouchGame\BallSpawner.cs" />
+    <Compile Include="Assets\scripts\TouchGame\AddToMeter.cs" />
+    <Compile Include="Assets\scripts\TouchGame\DeactivateBall.cs" />
+    <Compile Include="Assets\scripts\ui\ExcitementBar.cs" />
+    <Compile Include="Assets\scripts\TouchGame\ObjectPooling.cs" />
+    <Compile Include="Assets\scripts\TouchGame\shrinkingcircle.cs" />
+    <Compile Include="Assets\scripts\TouchGame\IDeactivatable.cs" />
+    <Compile Include="Assets\scripts\ui\BarManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
