--- a/Fit-To-Fat-Game/Assembly-CSharp.csproj
+++ b/Fit-To-Fat-Game/Assembly-CSharp.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Assets\scripts\ui\ExcitementBar.cs" />
     <Compile Include="Assets\scripts\TouchGame\ObjectPooling.cs" />
     <Compile Include="Assets\scripts\TouchGame\shrinkingcircle.cs" />
+    <Compile Include="Assets\scripts\TouchGame\ScoreSystem.cs" />
+    <Compile Include="Assets\scripts\TouchGame\AddToScore.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
